Developer/src/objects/MCLU__c.object
<CustomObject>
    <fields>
        <fullName>ActiveFlg__c</fullName>
        <formula>IF(Active__c,&quot;実施中&quot;,&quot;中止&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AltFrq__c</fullName>
        <label>AltFrq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AwardExpireDate__c</fullName>
        <formula>TEXT(AwardNB__r.ExpireDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>有効期限日</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardNB__c</fullName>
        <label>Award番号</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>MCLU</relationshipLabel>
        <relationshipName>MCLU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AwardPrintStartDate__c</fullName>
        <formula>TEXT(AwardNB__r.PrintStartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>発券開始日</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardPrintStopDate__c</fullName>
        <formula>TEXT(AwardNB__r.PrintStopDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>発券終了日</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGTNumber__c</fullName>
        <label>BGTNumber</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CategName__c</fullName>
        <formula>AwardNB__r.PlansheetPrefix__r.CategNB__r.CategName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>カテゴリ名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CellNumber__c</fullName>
        <label>CellNumber</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change__c</fullName>
        <label>Change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ClientName__c</fullName>
        <formula>AwardNB__r.PlansheetPrefix__r.ClientNB__r.ClientName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>顧客名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CluNB__c</fullName>
        <label>Clu番号</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CouponOfferLineA__c</fullName>
        <label>クーポン適用商品名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CouponTypeB__c</fullName>
        <label>CouponTypeB</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CouponValue__c</fullName>
        <label>クーポン金額</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DayOfWeek__c</fullName>
        <label>DayOfWeek</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>EndTime</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpireDate__c</fullName>
        <label>有効期限日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImageID__c</fullName>
        <label>ImageID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageNumber__c</fullName>
        <externalId>true</externalId>
        <label>ImageNumber</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImageSrc__c</fullName>
        <label>Image文字列</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KikakuName__c</fullName>
        <formula>AwardNB__r.KikakuName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>企画名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCLUNumber__c</fullName>
        <formula>Value(Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCLU番号</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Main__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MatrixNumber__c</fullName>
        <label>MatrixNumber</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxPrint__c</fullName>
        <label>MaxPrint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinAmt__c</fullName>
        <label>MinAmt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinQty__c</fullName>
        <label>MinQty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumMCLU__c</fullName>
        <formula>VALUE(Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCLU番号</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfferLine__c</fullName>
        <formula>AwardNB__r.OfferLine__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>オファーライン</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderAmount__c</fullName>
        <label>OrderAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrintStartDate__c</fullName>
        <label>発券開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PrintStopDate__c</fullName>
        <label>発券終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PrintTiming__c</fullName>
        <label>発券タイミング</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResultName__c</fullName>
        <formula>AwardNB__r.PlansheetPrefix__r.ClientNB__r.ClientName__c &amp; &quot; - &quot; &amp; AwardNB__r.PlansheetPrefix__r.CategNB__r.CategName__c  &amp; &quot; - &quot; &amp; TEXT(AwardNB__r.PlansheetPrefix__r.ContNB__c)  &amp; &quot; - &quot; &amp; 
TEXT(AwardNB__r.PlansheetPrefix__r.Cycle__c)  &amp; &quot; - &quot; &amp; 
AwardNB__r.PlansheetPrefix__r.SalesNo__r.Name&amp; &quot; - &quot; &amp; 
TEXT(AwardNB__r.PlansheetPrefix__r.PrintStartDate__c)  &amp; &quot; ～ &quot; &amp; 
TEXT(AwardNB__r.PlansheetPrefix__r.ExpireDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>検索結果名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>StartTime</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrActive__c</fullName>
        <label>Active文字列</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrMain__c</fullName>
        <label>Main文字列</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrStartDate__c</fullName>
        <label>発券開始日文字列</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrStopDate__c</fullName>
        <label>発券最終日文字列</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrUL__c</fullName>
        <label>UL文字列</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokubetsuKikaku__c</fullName>
        <formula>IF(AwardNB__r.TokubetsuKikaku__c,&quot;特別企画&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>特別企画</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriggerAmount__c</fullName>
        <label>TriggerAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TriggerNum__c</fullName>
        <label>TriggerNum</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weeks__c</fullName>
        <label>有効週</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WhenToPrint__c</fullName>
        <label>WhenToPrint</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>strExpireDate__c</fullName>
        <label>有効期限文字列</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>MCLU</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ImageID__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>Mclu番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>